--- a/DaemonCharacter/DaemonCharacter/Views/Home/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     <!-- Indicators -->
     <ol class="carousel-indicators">
         <li data-target='#carousel-example-generic' data-slide-to='0' class='active'>
-            <img ID="Image1" src="~/Images/12.jpg" style="width:50px;height:50px;" class="img-circle" />
+            <img ID="Image1" src="~/Images/12.jpg" width="50" height="50" class="img-circle" />
         </li>
         <li data-target='#carousel-example-generic' data-slide-to='1'>
             <img ID="Image2" src="~/Images/13.jpg" style="width:50px;height:50px;" class="img-circle" />
@@ -30,7 +30,6 @@
                     </div>*@
                 </div>
             </div>
-            <img src="~/Images/12.jpg" alt="" style="z-index:-1;" />
         </div>
         <div class="item two">
             <div class="main-text hidden-xs">
@@ -45,22 +44,20 @@
                     </div>*@
                 </div>
             </div>
-            <img src="~/Images/13.jpg" alt="" />
         </div>
         <div class="item three">
             <div class="main-text hidden-xs">
                 <div class="col-md-12 text-center">
-                    <h1>
+                    @*<h1>
                         You cannot<b class="yellow"> believe</b> in <b class="yellow">God</b><br />
                         <span class="span">until you believe in yourself.</span>
-                    </h1>
+                    </h1>*@
                     @*<div class="">
                         <asp:HyperLink ID="HyperLink5" class="btn btn-clear btn-sm btn-min-block">Android</asp:HyperLink>
                         <asp:HyperLink ID="HyperLink6" class="btn btn-clear btn-sm btn-min-block                           ">Apple</asp:HyperLink>
                     </div>*@
                 </div>
             </div>
-            <img src="~/Images/14.jpg" alt="" />
         </div>
     </div>
     <!-- Controls -->
