--- a/DaemonCharacter/DaemonCharacter/Content/1-col-portfolio.css
+++ b/DaemonCharacter/DaemonCharacter/Content/1-col-portfolio.css
@@ -24,8 +24,7 @@ h6 {
 }
 
 #body{
-    margin-top:40px;
-    padding:10px;
+    margin-top:75px;
 }
 /*
 .navbar-new {
@@ -169,19 +168,22 @@ h6 {
 }
 .carousel .one
 {
-    background-position: center center;
     background: url(../Images/12.jpg) no-repeat;
+    background-position: center center;
     background-attachment: fixed;
+    background-size:cover;
 }
 .carousel .two {
     background: url(../Images/13.jpg) no-repeat;
     background-position: center center;
     background-attachment: fixed;
+    background-size:cover;
 }
 .carousel .three {
     background: url(../Images/14.jpg) no-repeat;
      background-position: center center;
     background-attachment: fixed;
+    background-size:cover;
 }
 .carousel-fade .carousel-inner .item {
     opacity: 0;
@@ -746,7 +748,6 @@ h2.no-span:after {
 
 .dropdown-menu
 {
-    /*background-color: #770000;*/
     background-color: #000;
 }
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus
@@ -1029,10 +1030,6 @@ h2.no-span:after {
 }
 
 
-#contact
-{
-    /*background-color: #FFFFFF;*/
-}
 #contact .page-header
 {
     border-width: 1px;
