--- a/DaemonCharacter/DaemonCharacter/Views/Item/Delete.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Item/Delete.cshtml
@@ -1,20 +1,25 @@
-﻿@model DaemonCharacter.Models.RaceModel
+﻿@model DaemonCharacter.Models.ItemModel
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete item";
 }
 
-<h2>Delete</h2>
+<h2>Delete item</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <fieldset>
-    <legend>RaceModel</legend>
-
     <div class="display-label">
          @Html.DisplayNameFor(model => model.name)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.name)
+    </div>
+
+    <div class="display-label">
+         @Html.DisplayNameFor(model => model.effect)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.effect)
     </div>
 </fieldset>
 @using (Html.BeginForm()) {
