--- a/DaemonCharacter/DaemonCharacter/Views/Item/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Item/Index.cshtml
@@ -1,10 +1,13 @@
-﻿@model IEnumerable<DaemonCharacter.Models.RaceModel>
+﻿@model IEnumerable<DaemonCharacter.Models.ItemModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "List of items";
 }
 
-<h2>Index</h2>
+<h2 class="animated wow fadeInUp" data-wow-delay="0.2s">
+    <i class="fa fa-logo animated wow fadeInDown"></i>
+    &nbsp;List of items
+</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -14,6 +17,9 @@
         <th>
             @Html.DisplayNameFor(model => model.name)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.effect)
+        </th>
         <th></th>
     </tr>
 
@@ -21,6 +27,9 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.effect)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
