--- a/DaemonCharacter/DaemonCharacter/Views/Shared/_Menu.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Shared/_Menu.cshtml
@@ -1,63 +1,58 @@
-<script type="text/javascript" src="@Url.Content("~/Scripts/Menu.js")"></script>
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="~/Home/"><i class="fa fa-logo"></i>PLANET RPG</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <!-- Left nav -->
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="javascript:void(0);">Wiki</a></li>
+                @if (Request.IsAuthenticated)
+                {
 
-<div id='cssmenu'>
-    @if (Request.IsAuthenticated)
-    {
+                    <li class="dropdown">
+                        <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            Game Configuration<span id="Span1" class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu" data-dropdown-in="fadeInUp" data-dropdown-out="fadeOutDown">
 
-        <ul>
-            <li class='active'>
-                <a href="~/Home/"><span>Home</span></a>
-            </li>
-            <li class='has-sub'>
-                <a href="#"><span>Attributes</span></a>
-                <ul>
-                    <li>@Html.ActionLink("List Attr", "Index", "Attribute")</li>
-                    <li>@Html.ActionLink("Create", "Create", "Attribute")</li>
-                </ul>
-            </li>
-            <li class='has-sub'>
-                <a href="#"><span>Attribute Types</span></a>
-                <ul>
-                    <li>@Html.ActionLink("List Types", "Index", "AttributeType")</li>
-                    <li>@Html.ActionLink("Create", "Create", "AttributeType")</li>
-                </ul>
-            </li>
-            <li class='has-sub'>
-                <a href="#"><span>Players</span></a>
-                <ul>
-                    <li>@Html.ActionLink("List Chars", "Index", "Character")</li>
-                    <li>@Html.ActionLink("Create", "CreatePlayer", "Character")</li>
-                </ul>
-            </li>
-            <li class='has-sub'>
-                <a href="#"><span>NPC</span></a>
-                <ul>
-                    <li>@Html.ActionLink("Create", "CreateNPC", "Character")</li>
-                </ul>
-            </li>
-            <li class='has-sub'>
-                <a href="#"><span>Campaigns</span></a>
-                <ul>
-                    <li>@Html.ActionLink("List Campaigns", "Index", "Campaign")</li>
-                    <li>@Html.ActionLink("Create", "Create", "Campaign")</li>
-                </ul>
-            </li>
-            <li class='has-sub'>
-                <a href="#"><span>Races</span></a>
-                <ul>
-                    <li>@Html.ActionLink("List Them", "Index", "Race")</li>
-                    <li>@Html.ActionLink("Create", "Create", "Race")</li>
-                </ul>
-            </li>
-            @*<li class='last'><a href='#'><span>Contact</span></a></li>*@
-        </ul>
-    }
-    else
-    {
-        <ul>
-            <li class='active'>
-                <a href="~/Home/"><span>Home</span></a>
-            </li>
-        </ul>
-    }
+                            <li>@Html.ActionLink("Attributes", "Index", "Attribute")</li>
+                            <li>@Html.ActionLink("Items", "Index", "Item")</li>
+
+                        </ul>
+                    </li>
+
+                        <li class="dropdown">
+                            <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                Campaigns<span id="Span1" class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu" data-dropdown-in="fadeInUp" data-dropdown-out="fadeOutDown">
+
+                                <li>@Html.ActionLink("Characters", "Index", "Character")</li>
+                                <li>@Html.ActionLink("Campaigns", "Index", "Campaign")</li>
+
+                            </ul>
+                        </li>
+                }
+                <li>
+                    <!-- add search form -->
+                    <div class="navbar-form" role="search">
+                        <div class="input-group">
+                            <input type="text" ID="txtsearch" placeholder="Search this site" class="form-control" />
+                            @*<span class="input-group-btn">
+                                    <input type="button" ID="lbsearch" ToolTip="Search" class="btn btn-default"
+                                                    Text='<i class="glyphicon glyphicon-search"></i>' />
+                                </span>*@
+                        </div>
+                    </div>
+                </li>
+                <li id="login">
+                    @Html.Partial("_loginPartial")
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
