--- a/DaemonCharacter/DaemonCharacter/Views/Attribute/Create.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Attribute/Create.cshtml
@@ -1,6 +1,9 @@
 ﻿@model DaemonCharacter.Models.AttributeModel
 
-<h2 class="background double animated wow fadeInUp" data-wow-delay="0.2s">Create new attribute form</h2>
+<h2 class="animated wow fadeInUp" data-wow-delay="0.2s">
+    <i class="fa fa-logo animated wow fadeInDown"></i>
+    &nbsp;Create new attribute form
+</h2>
 
 @using (Html.BeginForm())
 {
