--- a/DaemonCharacter/DaemonCharacter/Views/CharacterAttribute/ListCharacterWithNoBonus.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/CharacterAttribute/ListCharacterWithNoBonus.cshtml
@@ -5,14 +5,14 @@
 }
 @foreach (var items in Model)
 {
-    if (string.IsNullOrEmpty(ViewBag.type) || ViewBag.type != items.attribute.type.name)
+    if (string.IsNullOrEmpty(ViewBag.type) || ViewBag.type != items.attribute.type)
     {
-        <h3>@Html.Raw(items.attribute.type.name)</h3>
+        <h3>@Html.Raw(items.attribute.type)</h3>
     }
     <div style="text-align:right;" title="@Html.Raw(items.attribute.description)">
         @Html.DisplayName(items.attribute.name)
-        <input type="number" class="dynamic-input-detail" id="ValAttr_@Html.Raw(items.idAttribute)" readonly="readonly" value="@Html.Raw(items.value)">
+        <input type="number" class="dynamic-input-detail" id="ValAttr_@Html.Raw(items.id)" readonly="readonly" value="@Html.Raw(items.value)">
     </div>
 
-    ViewBag.type = items.attribute.type.name;
+    ViewBag.type = items.attribute.type;
 }
