--- a/DaemonCharacter/DaemonCharacter/Views/Character/CreatePlayer.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Character/CreatePlayer.cshtml
@@ -2,12 +2,12 @@
 
 <head>
     <title>Creating a new character</title>
-    <link href="@Url.Content("~/Content/DynamicForm.css")"
-          rel="stylesheet" type="text/css" />
+    @*<link href="@Url.Content("~/Content/DynamicForm.css")"
+          rel="stylesheet" type="text/css" />*@
 </head>
 
 <h2 class="animated wow fadeInUp" data-wow-delay="0.2s">
-    <i class="fa fa-logoCreateCharacter animated wow fadeInDown"></i>
+    <i class="fa fa-shield animated wow fadeInDown"></i>
     &nbsp;Create Character Form
 </h2>
 <p id="messages">
