--- a/DaemonCharacter/DaemonCharacter/Views/Shared/_Layout.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Shared/_Layout.cshtml
@@ -25,20 +25,17 @@
 
     <!-- Required plugin - Animate.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
-    <link href="~/fonts/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    
 
 
     <title>@ViewBag.Title - PLANET RPG</title>
-    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     <meta name="viewport" content="width=device-width" />
 
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    @Styles.Render("~/Content/fonts")
 
-    @Scripts.Render("~/bundles/jquery")
-    @RenderSection("scripts", required: false)
 </head>
 <body>
 
@@ -109,5 +106,11 @@
     <script src="~/Scripts/contact.js" type="text/javascript"></script>
 
 
+    @*<link href="~/fonts/font-awesome.min.css" rel="stylesheet" type="text/css" />*@
+
+    @Scripts.Render("~/bundles/modernizr")
+
+    @Scripts.Render("~/bundles/jquery")
+    @RenderSection("scripts", required: false)
 </body>
 </html>
